--- a/src/sass/layout.scss/_advantages.scss
+++ b/src/sass/layout.scss/_advantages.scss
@@ -3,9 +3,13 @@
     background-color: $light-bg;
 }
 
-.advantages__list li {
-    &:not(:last-child) {
-        padding-bottom: 38px;
+.advantages__list { 
+    margin-left: 20px;
+
+    li {
+        &:not(:last-child) {
+            padding-bottom: 38px;
+        }
     }
 }
 
@@ -19,7 +23,8 @@
     }
 
 .advantages__number {
-    margin-top: 16px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 
     font-family: "Titan One";
     font-size: 36px;
@@ -27,13 +32,31 @@
     letter-spacing: 0.04em;
 
     color: $accent-dark;
+}
 
-    &::before {
-        display: block;
-        content: "";
-        width: 50px;
-        height: 50px;
-        background-image: url(../images/mobile/advantages/icon1_mobile.png);
-        background-repeat: no-repeat;
-    }
+.first__img::before {
+    display: block;
+    content: "";
+    width: 33px;
+    height: 50px;
+    background-image: url(../images/mobile/advantages/icon1_mobile.png);
+    background-repeat: no-repeat;
+}
+
+.second__img::before {
+    display: block;
+    content: "";
+    width: 50px;
+    height: 50px;
+    background-image: url(../images/mobile/advantages/icon2_mobile.png);
+    background-repeat: no-repeat;
+}
+
+.third__img::before {
+    display: block;
+    content: "";
+    width: 50px;
+    height: 50px;
+    background-image: url(../images/mobile/advantages/icon3_mobile.png);
+    background-repeat: no-repeat;
 }
