--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
 <section class="contacts">
     <div class="container">
-        <h2 class="contacts__title">Contacts and locations</h2>
+        <h2 class="contacts__title visually-hidden">Contacts and locations</h2>
         <ul class=" list contacts__list">
             <li class="contacts__item">
                 <p class="contacts__type">Cafe</p>
@@ -23,7 +23,7 @@
             </li>
 
             <li class="contacts__item">
-                <p class="contacts__type">Food truck</p>
+                <p class="contacts__type--background">Food truck</p>
                 <p class="contacts__location">Los Angeles</p>
                 <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                 <p class="contacts__work-days">Monday - Friday</p>
@@ -65,7 +65,7 @@
 
         <ul class="list more-info">
             <li class="more-info__item">
-                <button class="button" aria-label="Our Locations">Our Locations
+                <button class="button button--dark" aria-label="Our Locations">Our Locations
                     <svg class="button__icon  button__icon--light" width="4.43" height= "8">
                         <use href="./images/icons.svg#check-right"></use>
                         </svg>
@@ -73,7 +73,7 @@
             </li>
 
             <li class="more-info__item">
-                <button class="button" aria-label="Franchise">Franchise
+                <button class="button button--light" aria-label="Franchise">Franchise
                     <svg class="button__icon  button__icon--dark" width="4.43" height= "8">
                         <use href="./images/icons.svg#check-right"></use>
                         </svg>
