--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
           </a>
           <button
             type="button"
-            class="main-nav__button"
+            class="main-nav__open-button"
             aria-controls="main-nav__menu"
             data-menu-button
           >
@@ -38,8 +38,16 @@
           </button>
           <div class="main-nav__menu" id="main-nav__menu" data-menu>
               <button type="button"
-              class="button button--light">
-            Buy now</button>
+              class="button button--light main-nav__button">
+            Buy now
+            <svg
+            class="button__icon button__icon--dark"
+            width="10" height="10"
+            >
+            <use
+              href="./images/icons.svg#check-right"
+            ></use>
+          </svg></button>
             <nav>
               <ul class="site-nav list">
                 <li class="site-nav__item">
