--- a/src/sass/layout.scss/_header.scss
+++ b/src/sass/layout.scss/_header.scss
@@ -10,9 +10,9 @@
       display: inline-block;
       padding-top: 6px;
   }
-  .main-nav__button {
+  .main-nav__open-button {
     position: absolute;
-    top: 25px;
+    top: 23px;
     right: 20px;
     z-index: 2;
     display: block;
@@ -27,33 +27,33 @@
     }
   }
   .main-nav__svg {
-      width: 20px;
-      height: 12px;
-
-      .main-nav__button.is-open & {
-        width: 14px;
+      width: 21px;
       height: 14px;
+
+      .main-nav__open-button.is-open & {
+      width: 17px;
+      height: 17px;
       }
   }
   .main-nav__close {
-    fill: currentColor;
+    stroke: $btn-light-color;
   
     opacity: 0;
     visibility: hidden;
   
-    transition: visibility $animation, opacity $animation, fill $animation;
+    transition: visibility $animation, opacity $animation, stroke $animation;
   
-    .main-nav__button.is-open & {
+    .main-nav__open-button.is-open & {
       opacity: 1;
       visibility: visible;
     }
   }
   .main-nav__open {
-    fill: currentColor;
+    stroke: $accent-dark;
   
-    transition: visibility $animation, opacity $animation, fill $animation;
+    transition: visibility $animation, opacity $animation, stroke $animation;
   
-    .main-nav__button.is-open & {
+    .main-nav__open-button.is-open & {
       opacity: 0;
       visibility: hidden;
     }
@@ -61,6 +61,7 @@
   .main-nav__menu {
     display: flex;
     z-index: 1;
+    padding: 60px 0;
   
     @include for-tablet {
       align-items: center;
@@ -72,7 +73,6 @@
       left: 0;
       width: 100%;
       height: 100vh;
-      padding: 48px 40px;
   
       flex-direction: column;
   
@@ -92,7 +92,23 @@
         pointer-events: initial;
       }
     }
-    @media screen and (max-width: 380px) {
-      padding: 38px 30px;
+  }
+  .site-nav {
+      color: $white-text-color;
+  }
+  .main-nav__button {
+      width: 210px;
+      height: 44px;
+      margin: 0 auto 20px;
+  }
+  .site-nav__current {
+      color: $accent-dark;
+  }
+  .site-nav__item {
+    padding: 12px 21px;
+    border-top: 1px solid #E18298;
+
+    &:last-child {
+        border-bottom: 1px solid #E18298;
     }
   }
