--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,18 +1,18 @@
 
 <section class="advantages">
     <ul class="advantages__list list">
-        <h1 class=".visually-hidden"></h1>
-         <li class="advantages__item first__img">
+        <h1 class="visually-hidden">Our advantages</h1>
+         <li class="advantages__item advantages__item--first">
             <h2 class="advantages__number">721</h2>
             <p class="advantages__text">Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
-        <li class="advantages__item second__img">
+        <li class="advantages__item advantages__item--second">
              <h2 class="advantages__number">16KG</h2>
              <p class="advantages__text">Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
-        <li class="advantages__item third__img">
+        <li class="advantages__item advantages__item--third">
             <h2 class="advantages__number">84</h2>
             <p class="advantages__text" >Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
