--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,15 +4,16 @@
             <picture>
                 <source
                   srcset="
-                    ./images/mobile/header/logo.jpg    1x,
-                    ./images/mobile/header/logo@2x.jpg 2x
+                    ./images/mobile/header/logo.png    1x,
+                    ./images/mobile/header/logo@2x.png 2x
                   "
                   type="image/jpeg"
                 />
                 <img
-                  src="./images/mobile/header/logo.jpg"
+                  src="./images/mobile/header/logo.png"
                   alt="logo"
                   width="199"
+                  height="50"
                 />
               </picture>
           </a>
