Внесла изменения и стили для всех точек переломов

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -23,7 +23,7 @@
             </li>
 
             <li class="contacts__item">
-                <p class="contacts__type--background">Food truck</p>
+                <p class="contacts__type contacts__type--background">Food truck</p>
                 <p class="contacts__location">Los Angeles</p>
                 <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                 <p class="contacts__work-days">Monday - Friday</p>
