--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,6 @@
 
 <section class="advantages">
+    <div class="container">
     <ul class="advantages__list list">
         <h1 class="visually-hidden">Our advantages</h1>
          <li class="advantages__item advantages__item--first">
@@ -18,4 +19,5 @@
             consectetur. Mauris massa.</p>
         </li>
     </ul>
+    </div>
 </section>
