--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,36 +6,35 @@
     <ul class="list hero__links">
       <li class="hero__anchor">
         <a href="#products" class="link">
-        <button class="button button--dark hero__button">Products</button>
+          <button class="button button--dark hero__button">Products</button>
         </a>
       </li>
-    
+
       <li class="hero__anchor">
-        <a href="#about" class="link"></a>
-        <button class="button button--light hero__button hero__button--about">
-          How it’s made?
-        </button>
+        <a href="#about" class="link">
+          <button class="button button--light hero__button">How it’s made?</button>
         </a>
       </li>
     </ul>
   </div>
 
-  <!-- меня не очень устраивают имена классов hero__branches-item и hero__branches-type, но Юля тоже так называла -->
   <ul class="list hero__branches">
-    <li class="hero__branches-item">
-      <p class="hero__branches-type"><span class="hero__number">16</span> cafes</p>
-    </li>
-    <li class="hero__branches-item">
-      <p class="hero__branches-type"><span class="hero__number">23</span> food trucks</p>
-    </li>
+    <a href="#contacts" class="link">
+      <li class="hero__branches-item">
+        <p class="hero__branches-type"><span class="hero__number">16</span> cafes</p>
+      </li>
+      <li class="hero__branches-item">
+        <p class="hero__branches-type"><span class="hero__number">23</span> food trucks</p>
+      </li>
+    </a>
   </ul>
 
-  <div class="hero__modal">
-    <p class="hero__modal-text">
+  <div class="hero__about">
+    <p class="hero__about-text">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
       labore et
     </p>
-    <button class="hero__modal-btn button--light">
+    <button class="button button--light hero__about-btn">
       <svg class="hero__icon" width="8" height="8">
         <use href="./images/icons.svg#icon-arrow"></use>
       </svg>
