--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,23 +4,33 @@
         <h2 class="title products__title">products</h2>
       
         <ul class="list products__list">
-            <li class="products__item products__item--color">
+            <li class="products__item products__item--pink">
                 <h3 class="proudcts__item-name products__item--cream">ice cream</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-                <button type="button" class="products__item-button"></button>
+                <button type="button" class="products__item-button">
+                    <svg class="hero__icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-arrow"></use>
+                      </svg>
+                </button>
             </li>
-            <li class="products__item">
+            <li class="products__item products__item--orange">
                 <h3 class="proudcts__item-name products__item--coffe">ice coffee</h3>
-                <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                <button type="button" class="products__item-button"></button>
+                <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                <button  class="products__item-button">
+                    <svg class="hero__icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-arrow"></use>
+                      </svg>
+                </button>
             </li>
-            <li class="products__item">
-                <h3 class="proudcts-item-name products__item--milkshakes">milkshakes</h3>
-                <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-               
+            <li class="products__item products__item--green">
+                <h3 class="proudcts__item-name products__item--milkshakes">milkshakes</h3>
+                <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                <button  class="products__item-button">
+                    <svg class="hero__icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-arrow"></use>
+                      </svg>
+                </button>
             </li>
-        
         </ul>
-      
     </div>
 </section>
