--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products" id="products">
     <div class="container">
         <p class="label title-label">100% natural</p>
         <h2 class="title products__title">products</h2>
