--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -3,8 +3,8 @@
         <p class="label title-label">100% natural</p>
         <h2 class="title products__title">products</h2>
       
-        <ul class="list products__list">
-            <li class="products__item products__item--pink">
+        <ul class="list products__list card-set__list">
+            <li class="products__item products__item--pink card-set__item">
                 <h3 class="proudcts__item-name products__item--cream">ice cream</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
                 <button type="button" class="products__item-button">
@@ -13,7 +13,7 @@
                       </svg>
                 </button>
             </li>
-            <li class="products__item products__item--orange">
+            <li class="products__item products__item--orange card-set__item">
                 <h3 class="proudcts__item-name products__item--coffe">ice coffee</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <button  class="products__item-button">
@@ -23,7 +23,7 @@
                 </button>
             </li>
             <li class="products__item products__item--green">
-                <h3 class="proudcts__item-name products__item--milkshakes">milkshakes</h3>
+                <h3 class="proudcts__item-name products__item--milkshakes card-set__item">milkshakes</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <button  class="products__item-button">
                     <svg class="hero__icon" width="12" height="12">
