Done header+hero

--- a/src/sass/layout.scss/_header.scss
+++ b/src/sass/layout.scss/_header.scss
@@ -1,7 +1,12 @@
+.header {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+}
 .main-nav {
-    position: relative;
-    background: $hero-bg;
-    // Это я временно цвет поставила, потом надо будет transparent
+  display: flex;
+  position: relative;
+  background: transparent;
   
     @include for-desktop {
       display: flex;
@@ -10,6 +15,10 @@
   .main-nav__logo {
       display: inline-block;
       padding-top: 6px;
+
+      @include for-tablet {
+        padding-top: 13px;
+      }
 
       @include for-desktop {
         padding-top: 37px;
@@ -21,14 +30,19 @@
     position: absolute;
     top: 23px;
     right: 20px;
-    z-index: 2;
+    z-index: 3;
     display: block;
     margin: 0;
     padding: 0;
     border: none;
     background-color: transparent;
     cursor: pointer;
-  
+    
+    @include for-tablet {
+      top: 30px;
+      right: 225px;
+    }
+
     @include for-desktop {
       display: none;
     }
@@ -67,7 +81,6 @@
   }
   .main-nav__menu {
     display: flex;
-    z-index: 1;
     padding: 60px 0;
 
     @include phone-and-tablet {
@@ -110,7 +123,7 @@
           display: flex;
       }
   }
-  .main-nav__button {
+  .main-nav__buy-button {
     width: 210px;
     height: 44px;
     margin: 0 auto 20px;
@@ -118,9 +131,27 @@
     font-weight: 700;
     line-height: 1.31;
 
+    @include for-tablet {
+      width: 186px;
+  }
+
     @include for-desktop {
         width: 159px;
         margin: 38px 0 0;
+    }
+  }
+  .main-nav__buy-button--right {
+    width: 160px;
+    display: block;
+    margin-top: 15px;
+    margin-left: auto;
+
+    @include only-phone {
+      display: none;
+    }
+
+    @include for-desktop {
+      display: none;
     }
   }
   .site-nav__current {
