--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<!-- <header class="header">
     <div class="container main-nav">
         <a href="./index.html" class="main-nav__logo link">
             <picture>
@@ -39,7 +39,7 @@
           </button>
           <div class="main-nav__menu" id="main-nav__menu" data-menu>
               <button type="button"
-              class="button button--light main-nav__button">
+              class="button button--light main-nav__buy-button">
             Buy now
             <svg
             class="button__icon button__icon--dark"
@@ -48,7 +48,8 @@
             <use
               href="./images/icons.svg#check-right"
             ></use>
-          </svg></button>
+            </svg>
+            </button>
             <nav>
               <ul class="site-nav list">
                 <li class="site-nav__item">
@@ -73,6 +74,18 @@
                 </li>
               </ul>
             </nav>
-          </div>        
+          </div>   
+          <button type="button"
+          class="button button--light main-nav__buy-button--right">
+        Buy now
+        <svg
+        class="button__icon button__icon--dark"
+        width="10" height="10"
+        >
+        <use
+          href="./images/icons.svg#check-right"
+        ></use>
+        </svg>
+      </button>     
     </div>
-</header>
+</header> -->
