--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,7 +5,7 @@
       
         <ul class="list products__list card-set__list">
             <li class="products__item products__item--pink card-set__item">
-                <h3 class="proudcts__item-name products__item--cream">ice cream</h3>
+                <h3 class="products__item-name products__item--cream">ice cream</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
                 <button type="button" class="products__item-button">
                     <svg class="hero__icon" width="12" height="12">
@@ -22,8 +22,8 @@
                       </svg>
                 </button>
             </li>
-            <li class="products__item products__item--green">
-                <h3 class="proudcts__item-name products__item--milkshakes card-set__item">milkshakes</h3>
+            <li class="products__item products__item--green card-set__item">
+                <h3 class="proudcts__item-name products__item--milkshakes ">milkshakes</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <button  class="products__item-button">
                     <svg class="hero__icon" width="12" height="12">
