--- a/src/sass/base/_card-set.scss
+++ b/src/sass/base/_card-set.scss
@@ -1,7 +1,7 @@
 .card-set__list{
     @include for-tablet{
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         margin-right: -20px;
     }
         @include for-desktop{
