card-set исправил

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -14,7 +14,7 @@
                 </button>
             </li>
             <li class="products__item products__item--orange card-set__item">
-                <h3 class="proudcts__item-name products__item--coffe">ice coffee</h3>
+                <h3 class="products__item-name products__item--coffe">ice coffee</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <button  class="products__item-button">
                     <svg class="hero__icon" width="12" height="12">
@@ -23,7 +23,7 @@
                 </button>
             </li>
             <li class="products__item products__item--green card-set__item">
-                <h3 class="proudcts__item-name products__item--milkshakes ">milkshakes</h3>
+                <h3 class="products__item-name products__item--milkshakes ">milkshakes</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <button  class="products__item-button">
                     <svg class="hero__icon" width="12" height="12">
