--- a/src/sass/layout.scss/_products.scss
+++ b/src/sass/layout.scss/_products.scss
@@ -20,7 +20,7 @@
 .products__item{
         border-radius: 24px;
 }
-.proudcts__item-name{
+.products__item-name{
     position: relative;
     padding-top: 161px;
     font-size: 20px;
@@ -36,7 +36,7 @@
     line-height: 1.13;
     }
 }
-.proudcts__item-name::after{
+.prouducts__item-name::after{
     content: '';
     background-image: url('../images/mobile/products/circle@2x.png');
     background-position: center;
