--- a/src/sass/layout.scss/_products.scss
+++ b/src/sass/layout.scss/_products.scss
@@ -36,7 +36,7 @@
     line-height: 1.13;
     }
 }
-.prouducts__item-name::after{
+.products__item-name::after{
     content: '';
     background-image: url('../images/mobile/products/circle@2x.png');
     background-position: center;
