Добавляет модальное окно

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -12,7 +12,7 @@
       Cras massa nibh, tincidunt.
     </p>
     <p class="about__text">Aliquam erat volutpat. Aenean accumsan.</p>
-    <button class="button button--light about__btn">
+    <button class="button button--light about__btn" data-modal-open>
       Read more
       <svg class="button__icon button__icon--dark" width="7" height="10">
         <use href="./images/icons.svg#check-right"></use>
