--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -15,6 +15,12 @@ body {
   width: 1px !important;
   overflow: hidden;
 }
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-100%);
+}
 
 h1,
 h2,
