--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -7,7 +7,7 @@
             <li class="products__item products__item--pink card-set__item">
                 <h3 class="products__item-name products__item--cream">ice cream</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-                <button type="button" class="products__item-button">
+                <button  class="products__item-button button--light" >
                     <svg class="hero__icon" width="12" height="12">
                         <use href="./images/icons.svg#icon-arrow"></use>
                       </svg>
@@ -16,7 +16,7 @@
             <li class="products__item products__item--orange card-set__item">
                 <h3 class="products__item-name products__item--coffe">ice coffee</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <button  class="products__item-button">
+                <button  class="products__item-button button--light" >
                     <svg class="hero__icon" width="12" height="12">
                         <use href="./images/icons.svg#icon-arrow"></use>
                       </svg>
@@ -25,7 +25,7 @@
             <li class="products__item products__item--green card-set__item">
                 <h3 class="products__item-name products__item--milkshakes ">milkshakes</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <button  class="products__item-button">
+                <button  class="products__item-button button--light">
                     <svg class="hero__icon" width="12" height="12">
                         <use href="./images/icons.svg#icon-arrow"></use>
                       </svg>
@@ -34,3 +34,6 @@
         </ul>
     </div>
 </section>
+
+
+    
