Добавила id на секцию

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section class="contacts" id="contacts">
     <div class="container">
         <h2 class="contacts__title visually-hidden">Contacts and locations</h2>
         <ul class=" list contacts__list">
