--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -7,33 +7,45 @@
             <li class="products__item products__item--pink card-set__item">
                 <h3 class="products__item-name products__item--cream">ice cream</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-                <button  class="products__item-button button--light" >
+                <button  class="button-animation products__item-button button--light" >
                     <svg class="hero__icon" width="12" height="12">
                         <use href="./images/icons.svg#icon-arrow"></use>
                       </svg>
                 </button>
+                <p class="read products__item--pink">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit suscipit, accusamus reprehenderit iure explicabo repellendus optio reiciendis. Harum amet eveniet, a facere exercitationem eius tempora alias?Nemo aliquid cumque est Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
             </li>
             <li class="products__item products__item--orange card-set__item">
                 <h3 class="products__item-name products__item--coffe">ice coffee</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <button  class="products__item-button button--light" >
+                <button  class="button-animation products__item-button button--light" >
                     <svg class="hero__icon" width="12" height="12">
                         <use href="./images/icons.svg#icon-arrow"></use>
                       </svg>
                 </button>
+                <p class="read products__item--orange">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit suscipit, accusamus reprehenderit iure explicabo repellendus optio reiciendis. Harum amet eveniet, a facere exercitationem eius tempora alias? Nemo aliquid cumque est Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
             </li>
             <li class="products__item products__item--green card-set__item">
                 <h3 class="products__item-name products__item--milkshakes ">milkshakes</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <button  class="products__item-button button--light">
+                <button  class="button-animation products__item-button button--light">
                     <svg class="hero__icon" width="12" height="12">
                         <use href="./images/icons.svg#icon-arrow"></use>
                       </svg>
                 </button>
+                <p class="read products__item--green">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit suscipit, accusamus reprehenderit iure explicabo repellendus optio reiciendis. Harum amet eveniet, a facere exercitationem eius tempora alias? Nemo aliquid cumque est Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
             </li>
         </ul>
     </div>
 </section>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+     $('.button-animation').click(function(){
+      $(this).parent().children('.read').slideToggle(250);
+      return false;
+     });
+    });
+    </script>
 
 
     
