--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -12,7 +12,7 @@
                         <use href="./images/icons.svg#icon-arrow"></use>
                       </svg>
                 </button>
-                <p class="read products__item--pink">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit suscipit, accusamus reprehenderit iure explicabo repellendus optio reiciendis. Harum amet eveniet, a facere exercitationem eius tempora alias?Nemo aliquid cumque est Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                <p class="sub-text products__item--pink">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit suscipit, accusamus reprehenderit iure explicabo repellendus optio reiciendis. Harum amet eveniet, a facere exercitationem eius tempora alias?Nemo aliquid cumque est Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
             </li>
             <li class="products__item products__item--orange card-set__item">
                 <h3 class="products__item-name products__item--coffe">ice coffee</h3>
@@ -22,7 +22,7 @@
                         <use href="./images/icons.svg#icon-arrow"></use>
                       </svg>
                 </button>
-                <p class="read products__item--orange">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit suscipit, accusamus reprehenderit iure explicabo repellendus optio reiciendis. Harum amet eveniet, a facere exercitationem eius tempora alias? Nemo aliquid cumque est Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                <p class="sub-text products__item--orange">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit suscipit, accusamus reprehenderit iure explicabo repellendus optio reiciendis. Harum amet eveniet, a facere exercitationem eius tempora alias? Nemo aliquid cumque est Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
             </li>
             <li class="products__item products__item--green card-set__item">
                 <h3 class="products__item-name products__item--milkshakes ">milkshakes</h3>
@@ -32,7 +32,7 @@
                         <use href="./images/icons.svg#icon-arrow"></use>
                       </svg>
                 </button>
-                <p class="read products__item--green">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit suscipit, accusamus reprehenderit iure explicabo repellendus optio reiciendis. Harum amet eveniet, a facere exercitationem eius tempora alias? Nemo aliquid cumque est Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                <p class="sub-text products__item--green">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit suscipit, accusamus reprehenderit iure explicabo repellendus optio reiciendis. Harum amet eveniet, a facere exercitationem eius tempora alias? Nemo aliquid cumque est Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
             </li>
         </ul>
     </div>
@@ -41,7 +41,7 @@
 <script type="text/javascript">
     $(document).ready(function(){
      $('.button-animation').click(function(){
-      $(this).parent().children('.read').slideToggle(250);
+      $(this).parent().children('.sub-text').slideToggle(250);
       return false;
      });
     });
