--- a/src/sass/layout.scss/_products.scss
+++ b/src/sass/layout.scss/_products.scss
@@ -199,7 +199,7 @@
           margin-bottom: 50px;
     }
     }
-.read{
+.sub-text{
     position: absolute;
     display: none;
     border-radius: 24px;
