--- a/src/sass/layout.scss/_products.scss
+++ b/src/sass/layout.scss/_products.scss
@@ -20,6 +20,10 @@
 .products__item{
         border-radius: 24px;
         position: relative;
+        @include only-phone {
+            &:not(:last-child) {
+                margin-bottom: 130px;
+          }}
 }
 .products__item-name{
     position: relative;
