--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,19 +1,19 @@
 
 <section class="advantages">
     <div class="container">
-    <ul class="advantages__list list">
+    <ul class="advantages__list list card-set__list">
         <h1 class="visually-hidden">Our advantages</h1>
-         <li class="advantages__item advantages__item--first">
+         <li class="advantages__item advantages__item--first card-set__item">
             <h2 class="advantages__number">721</h2>
             <p class="advantages__text">Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
-        <li class="advantages__item advantages__item--second">
+        <li class="advantages__item advantages__item--second card-set__item">
              <h2 class="advantages__number">16KG</h2>
              <p class="advantages__text">Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
-        <li class="advantages__item advantages__item--third">
+        <li class="advantages__item advantages__item--third card-set__item">
             <h2 class="advantages__number">84</h2>
             <p class="advantages__text" >Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
