--- a/src/sass/layout.scss/_advantages.scss
+++ b/src/sass/layout.scss/_advantages.scss
@@ -32,6 +32,12 @@
         width: 180px;
         height: 67px;
     }
+
+    @include for-desktop {
+        width: 330px;
+        font-size: 16px;
+        line-height: 28px;
+      }
 }
 
 .advantages__number {
@@ -43,6 +49,12 @@
     letter-spacing: 0.04em;
 
     color: $accent-dark;
+
+
+    @include for-desktop {
+        font-size: 58px;
+        line-height: 66px;
+      }
 }
 
 .advantages__item--first::before {
@@ -53,6 +65,10 @@
     margin-bottom: 15px;
     background-image: url('../images/mobile/advantages/icon1_mobile.png');
     background-repeat: no-repeat;
+
+    @include for-desktop {
+        margin-bottom: 40px;
+      }
 }
 
 .advantages__item--second::before {
@@ -63,6 +79,10 @@
     margin-bottom: 15px;
     background-image: url('../images/mobile/advantages/icon2_mobile.png');
     background-repeat: no-repeat;
+
+    @include for-desktop {
+        margin-bottom: 40px;
+      }
 }
 
 .advantages__item--third::before {
@@ -73,9 +93,8 @@
     margin-bottom: 15px;
     background-image: url('../images/mobile/advantages/icon3_mobile.png');
     background-repeat: no-repeat;
-}
 
-//   @include for-desktop {
-//     font-size: 30px;
-//     line-height: 1.13;
-//   }
+    @include for-desktop {
+        margin-bottom: 40px;
+      }
+}
