modal+menu done

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -128,7 +128,7 @@
           I agree to the newsletter and accept the
           <a
             class="consent__agreement"
-            href="https://memepedia.ru/wp-content/uploads/2019/08/readyimage_78556.jpg"
+            href="https://i.kym-cdn.com/photos/images/original/001/526/890/131.png"
             target="_blank"
             rel="noopener noreferrer"
           >
