styles for desktop and tablet

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="gallery">
-  <div class="container">
+  <div class="container gallery__grid">
     <figure class="gallery__item gallery__item--1">
       <picture>
         <source
@@ -28,7 +28,7 @@
           type="image/jpeg"
         />
         <img
-          src="../images/desktop/gallery/img2.jpg"
+          src="./images/desktop/gallery/img2.jpg"
           class="gallery__img"
           alt="Ice cream in waffle"
         />
@@ -45,7 +45,7 @@
           type="image/jpeg"
         />
         <img
-          src="../images/desktop/gallery/img3.jpg"
+          src="./images/desktop/gallery/img3.jpg"
           class="gallery__img"
           alt="Raspberry ice cream"
         />
@@ -61,7 +61,7 @@
           srcset="./images/desktop/gallery/img4.jpg 1x, ./images/desktop/gallery/img4@2x.jpg 2x"
           type="image/jpeg"
         />
-        <img src="../images/desktop/gallery/img4.jpg" class="gallery__img" alt="8 ice cream cone" />
+        <img src="./images/desktop/gallery/img4.jpg" class="gallery__img" alt="8 ice cream cone" />
       </picture>
     </figure>
     <figure class="gallery__item gallery__item--5">
@@ -75,7 +75,7 @@
           type="image/jpeg"
         />
         <img
-          src="../images/desktop/gallery/img5.jpg"
+          src="./images/desktop/gallery/img5.jpg"
           class="gallery__img"
           alt="Girl with ice cream"
         />
@@ -91,11 +91,7 @@
           srcset="./images/desktop/gallery/img6.jpg 1x, ./images/desktop/gallery/img6@2x.jpg 2x"
           type="image/jpeg"
         />
-        <img
-          src="../images/desktop/gallery/img6.jpg"
-          class="gallery__img"
-          alt="Ice cream dessert"
-        />
+        <img src="./images/desktop/gallery/img6.jpg" class="gallery__img" alt="Ice cream dessert" />
       </picture>
     </figure>
     <figure class="gallery__item gallery__item--7">
@@ -109,7 +105,7 @@
           type="image/jpeg"
         />
         <img
-          src="../images/desktop/gallery/img7.jpg"
+          src="./images/desktop/gallery/img7.jpg"
           class="gallery__img"
           alt="Ice cream in the city"
         />
@@ -126,7 +122,7 @@
           type="image/jpeg"
         />
         <img
-          src="../images/desktop/gallery/img8.jpg"
+          src="./images/desktop/gallery/img8.jpg"
           class="gallery__img"
           alt="Dog with ice cream"
         />
@@ -160,7 +156,7 @@
           type="image/jpeg"
         />
         <img
-          src="../images/desktop/gallery/img10.jpg"
+          src="./images/desktop/gallery/img10.jpg"
           class="gallery__img"
           alt="Ice cream dessert"
         />
