--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,8 +1,8 @@
 <section class="contacts" id="contacts">
     <div class="container">
         <h2 class="contacts__title visually-hidden">Contacts and locations</h2>
-        <ul class=" list contacts__list">
-            <li class="contacts__item">
+        <ul class=" list contacts__list card-set__list">
+            <li class="contacts__item card-set__item">
                 <p class="contacts__type">Cafe</p>
                 <p class="contacts__location">Chicago</p>
                 <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
@@ -22,7 +22,7 @@
                 </ul>
             </li>
 
-            <li class="contacts__item">
+            <li class="contacts__item card-set__item">
                 <p class="contacts__type contacts__type--background">Food truck</p>
                 <p class="contacts__location">Los Angeles</p>
                 <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
@@ -42,7 +42,7 @@
                 </ul>
             </li>
 
-            <li class="contacts__item">
+            <li class="contacts__item card-set__item">
                 <p class="contacts__type">Cafe</p>
                 <p class="contacts__location">New York</p>
                 <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
