--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -86,10 +86,11 @@
 
 
 
-<!-- <div class="location-backdrop is-hidden" data-location-modal>
+
+<div class="location-backdrop" data-location-modal>
     <div class="location-modal">
         <div class="location-modal__image">
-              <img src="./images/location/ice-cream.webp" alt= "ice-cream" width="100%" height="300"/>
+              <img src="./images/location/ice-cream.webp" alt= "ice-cream" width="100%"/>
               <button class="location-modal__button" data-location-modal-close>
                 <svg width="16" height="16">
                     <use class="location-modal__icon" href="./images/icons.svg#menu-close"></use>
@@ -97,19 +98,21 @@
               </button> 
         </div> 
 
-        <p class="location-modal__text">See where our stores are located</p>
+        <p class="location-modal__text">You can find us here!</p>
 
         <ul class="list location-modal__city">
             <li class="location-modal__maps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.8858209706646!2d-87.72198048488464!3d41.895312579220835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e3330b49fb335%3A0xb46fa1274dbc6fbf!2sIce%20Cream%20Bar!5e0!3m2!1sru!2sua!4v1623155680433!5m2!1sru!2sua" width="430" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.8858209706646!2d-87.72198048488464!3d41.895312579220835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e3330b49fb335%3A0xb46fa1274dbc6fbf!2sIce%20Cream%20Bar!5e0!3m2!1sru!2sua!4v1623155680433!5m2!1sru!2sua" height="270" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </li>
             <li class="location-modal__maps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13206.688008573514!2d-118.45698173022458!3d34.154732700000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb01944603573c6c5!2sSonny&#39;s%20Handcrafted%20Ice%20Cream%20%26%20Italian%20Ice!5e0!3m2!1sru!2sua!4v1623156062251!5m2!1sru!2sua" width="430" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13206.688008573514!2d-118.45698173022458!3d34.154732700000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb01944603573c6c5!2sSonny&#39;s%20Handcrafted%20Ice%20Cream%20%26%20Italian%20Ice!5e0!3m2!1sru!2sua!4v1623156062251!5m2!1sru!2sua" height="270" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </li>
             <li class="location-modal__maps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3025.092773658724!2d-73.95787718492794!3d40.69395437933384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b2a4fd39a27%3A0x598d4925e5bb1cf8!2sIce%20Cream%20House!5e0!3m2!1sru!2sua!4v1623156728748!5m2!1sru!2sua" width="430" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3025.092773658724!2d-73.95787718492794!3d40.69395437933384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b2a4fd39a27%3A0x598d4925e5bb1cf8!2sIce%20Cream%20House!5e0!3m2!1sru!2sua!4v1623156728748!5m2!1sru!2sua" height="270" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </li>
         </ul>
         
     </div>
-  </div> -->
+  </div>
+
+  <script src="./js/location-modal.js"></script>
