--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -87,7 +87,7 @@
 
 
 
-<div class="location-backdrop" data-location-modal>
+<div class="location-backdrop is-hidden" data-location-modal>
     <div class="location-modal">
         <div class="location-modal__image">
               <img src="./images/location/ice-cream.webp" alt= "ice-cream" width="100%"/>
